tests/error/type_match/base_case_slice_const_propagation1.bz
function test()
{
	let _: [: *const int32] = [: *int32]();
}
